k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: novacommerce
  labels: {app: django}
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxSurge: 1, maxUnavailable: 0}
  selector:
    matchLabels: {app: django}
  template:
    metadata:
      labels: {app: django}
    spec:
      containers:
        - name: django
          image: ghcr.io/muhammaddiyor2002/novacommerce-django:latest
          imagePullPolicy: IfNotPresent
          ports: [{containerPort: 8000, name: http}]
          readinessProbe:
            httpGet: {path: /healthz, port: http}
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: {path: /healthz, port: http}
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests: {cpu: "200m", memory: "300Mi"}
            limits:   {cpu: "1000m", memory: "1Gi"}
---
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: novacommerce
spec:
  type: ClusterIP
  selector: {app: django}
  ports:
    - {port: 80, targetPort: 8000, name: http}
