k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: novacommerce
spec:
  replicas: 1
  selector:
    matchLabels: {app: redis}
  template:
    metadata:
      labels: {app: redis}
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          args: ["--appendonly", "yes", "--maxmemory", "1gb", "--maxmemory-policy", "allkeys-lru"]
          ports: [{containerPort: 6379}]
          resources:
            requests: {cpu: "100m", memory: "256Mi"}
            limits:   {cpu: "500m", memory: "1Gi"}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: novacommerce
spec:
  selector: {app: redis}
  ports: [{port: 6379, targetPort: 6379}]
